// DBML for SIWA (Sistem Informasi Warga) RT Management

Table residents {
  id integer [primary key]
  full_name varchar
  ktp_photo varchar [null]
  resident_status enum // 'tetap', 'kontrak'
  phone_number varchar
  marital_status enum // 'menikah', 'belum'
  created_at timestamp
  updated_at timestamp
}

Table houses {
  id integer [primary key]
  house_number varchar [unique]
  status enum // 'dihuni', 'tidak_dihuni'
  created_at timestamp
  updated_at timestamp
}

Table occupancy_histories {
  id integer [primary key]
  house_id integer
  resident_id integer
  start_date date
  end_date date [null]
  is_current boolean
  created_at timestamp
  updated_at timestamp
}

Table payments {
  id integer [primary key]
  house_id integer
  resident_id integer
  payment_type enum // 'satpam', 'kebersihan', etc
  amount decimal
  payment_period_start date
  payment_period_end date
  payment_date date
  status enum // 'paid', 'unpaid'
  description text [null]
  created_at timestamp
  updated_at timestamp
}

Table expenses {
  id integer [primary key]
  title varchar
  description text [null]
  amount decimal
  expense_date date
  category varchar
  recurring boolean
  created_at timestamp
  updated_at timestamp
}

Table users {
  id integer [primary key]
  name varchar
  email varchar [unique]
  password varchar
  created_at timestamp
  updated_at timestamp
}

// Relationships
Ref: occupancy_histories.house_id > houses.id [delete: cascade]
Ref: occupancy_histories.resident_id > residents.id [delete: cascade]
Ref: payments.house_id > houses.id [delete: cascade]
Ref: payments.resident_id > residents.id [delete: cascade]
